--- a/src/components/Layout/Header/LocationChooser.module.scss
+++ b/src/components/Layout/Header/LocationChooser.module.scss
@@ -1,4 +1,4 @@
-.localStore_Box {
+.box {
     width: 120px;
     height: 40px;
     background: rgba(255, 255, 255, 0.2);
@@ -12,6 +12,7 @@
     align-items: center;
     gap: 3px;
     padding: 4px 6px !important;
+    width: 100%;
 }
 
 .dropdownButton:focus {
@@ -29,7 +30,7 @@
 
 .boxContent {
     display: inline-block;
-    margin-left: 5px;
+    margin-left: 2px;
     text-align: left;
 }
 
@@ -50,13 +51,21 @@
 .dropdownMenu {
     padding: 0 !important;
     border-radius: 10px !important;
+    min-width: 0 !important;
+    overflow: hidden;
 }
 
 .dropdownMenu li {
     padding: 3px 20px;
+    color: #333;
+    font-size: 14px;
+    line-height: 20px;
 }
 
 .dropdownMenu li.active {
     background-color: #FEE2E2;
-    /* background: red; */
+}
+
+.dropdownMenu li:not(.active):hover {
+    background-color: #D3D3D350;
 }
