migrate from css to scss

--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -1,7 +1,9 @@
+@import "../../../library";
+
 .navbar {
    position: fixed;
    top: 0;
-   background-color: #d70018;
+   background-color: $primary;
    box-shadow: #00000050 0px 4px 6px -1px;
    font-size: 12px;
    line-height: 22px;
@@ -16,4 +18,17 @@
    display: flex;
    align-items: center;
    justify-content: space-around;
+}
+
+%header-item {
+   color: #fff;
+   display: flex;
+   align-items: center;
+   padding: 5px 10px;
+
+   &:hover {
+      background: rgba(255, 255, 255, 0.2);
+      border-radius: 1rem;
+      cursor: pointer;
+   }
 }
