--- a/src/components/Layout/Header/OrderInfo.module.scss
+++ b/src/components/Layout/Header/OrderInfo.module.scss
@@ -1,14 +1,7 @@
-.orderInfoBox {
-   color: #fff;
-   display: flex;
-   align-items: center;
-   padding: 5px 10px;
-}
+@import "./Header.module.scss";
 
-.orderInfoBox:hover {
-   background: rgba(255, 255, 255, 0.2);
-   border-radius: 1rem;
-   cursor: pointer;
+.orderInfoBox {
+   @extend %header-item;
 }
 
 .orderInfoIcon {
