--- a/src/components/Layout/Header/CartBag.module.scss
+++ b/src/components/Layout/Header/CartBag.module.scss
@@ -1,14 +1,7 @@
-.cartBox {
-   color: #fff;
-   display: flex;
-   align-items: center;
-   padding: 5px 10px;
+@import "./Header.module.scss";
 
-   &:hover {
-      background: rgba(255, 255, 255, 0.2);
-      border-radius: 1rem;
-      cursor: pointer;
-   }
+.cartBox {
+   @extend %header-item;
 }
 
 .cartIcon_Block {
