--- a/src/components/Layout/Header/PhoneContact.module.scss
+++ b/src/components/Layout/Header/PhoneContact.module.scss
@@ -1,22 +1,15 @@
-.phoneContactBox {
-    color: #fff;
-    display: flex;
-    align-items: center;
-    padding: 5px 10px;
-}
+@import "./Header.module.scss";
 
-.phoneContactBox:hover {
-    background: rgba(255, 255, 255, 0.2);
-    border-radius: 1rem;
-    cursor: pointer;
+.phoneContactBox {
+   @extend %header-item;
 }
 
 .phoneContactIcon {
-    position: relative;
-    font-size: 24px;
+   position: relative;
+   font-size: 24px;
 }
 
 .phoneContactText {
-    margin: 0 0 0 5px;
-    line-height: 16px;
+   margin: 0 0 0 5px;
+   line-height: 16px;
 }
