--- a/src/components/UI/Input.module.scss
+++ b/src/components/UI/Input.module.scss
@@ -1,13 +1,19 @@
 .input {
-    background-color: #fff;
-    display: inline-block;
-    height: 2rem;
-    max-width: 100%;
-    padding: 5px 10px 5px 6px;
-    border: none;
-    border-radius: 10px;
-}
+   background-color: #fff;
+   display: inline-block;
+   height: 2rem;
+   max-width: 100%;
+   padding: {
+      top: 5px;
+      right: 10px;
+      bottom: 5px;
+      left: 6px;
+   }
+   border: none {
+      radius: 10px;
+   }
 
-.input:focus {
-    outline: none;
+   &:focus {
+      outline: none;
+   }
 }
