--- a/src/pages/Homepage.module.scss
+++ b/src/pages/Homepage.module.scss
@@ -4,6 +4,7 @@
    max-width: 1080px;
    min-height: 600px;
    margin: auto;
-   background-color: red;
+   // background-color: red;
    margin-top: $header-height;
+   padding: 15px 0;
 }
