--- a/src/pages/Homepage.module.scss
+++ b/src/pages/Homepage.module.scss
@@ -1,7 +1,7 @@
 @import "../library";
 
 .wrapper {
-   max-width: 1080px;
+   max-width: $content-width;
    min-height: 600px;
    margin: auto;
    // background-color: red;
