--- a/src/_library.scss
+++ b/src/_library.scss
@@ -4,7 +4,10 @@ $info: #2f86eb;
 $warning: #ffc021;
 $danger: #dc3545;
 
+$border-radius: 10px;
+$box-shadow: (rgb(60 64 67 / 10%) 0px 1px 2px 0px, rgb(60 64 67 / 15%) 0px 2px 6px 2px);
 $header-height: 64px;
+$content-width: 1200px;
 
 @mixin prefix($property, $value, $prefixes) {
    @each $prefix in $prefixes {
