--- a/src/pages/Homepage.module.scss
+++ b/src/pages/Homepage.module.scss
@@ -2,9 +2,8 @@
 
 .wrapper {
    max-width: $content-width;
-   min-height: 600px;
+   height: 380px;
    margin: auto;
-   // background-color: red;
    margin-top: $header-height;
    padding: 15px 0;
 }
