[WIP] progress product list

--- a/src/components/UI/Button.module.scss
+++ b/src/components/UI/Button.module.scss
@@ -38,6 +38,9 @@
    }
 
    &:hover {
+      color: inherit;
+   }
+   &.hover:hover {
       filter: saturate(1.5) opacity(0.9) contrast(1.05);
    }
    &:disabled {
