--- a/src/_library.scss
+++ b/src/_library.scss
@@ -9,6 +9,13 @@ $box-shadow: (rgb(60 64 67 / 10%) 0px 1px 2px 0px, rgb(60 64 67 / 15%) 0px 2px 6
 $header-height: 64px;
 $content-width: 1200px;
 
+@mixin absolute-center($offsetX: 0px, $offsetY: 0px) {
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(calc(-50% + $offsetX), calc(-50% + $offsetY));
+}
+
 @mixin prefix-property($property, $value, $prefixes) {
    @each $prefix in $prefixes {
       -#{$prefix}-#{$property}: $value;
