fix category bar (add split button), carousel issue

--- a/src/components/Carousel/PromotionCarousel/ControlItems.module.scss
+++ b/src/components/Carousel/PromotionCarousel/ControlItems.module.scss
@@ -1,3 +1,12 @@
+.slickDots {
+   display: flex;
+   position: relative;
+   margin-top: 1px;
+   gap: 1px;
+   height: 80px;
+   overflow: hidden;
+}
+
 .slickItem {
    display: inline-block;
    height: inherit;
@@ -18,8 +27,8 @@
       background-color: #f1f1f1;
    }
 
-   &.active {
+   &.active span {
       font-weight: 700;
-      border-bottom: 6px solid rgb(201, 55, 55);
+      border-bottom: 5px solid rgb(201, 55, 55);
    }
 }
