--- a/src/components/Carousel/ControlButton.module.scss
+++ b/src/components/Carousel/ControlButton.module.scss
@@ -15,6 +15,11 @@ $circle-size: 30px;
 
    &:hover {
       background-color: #33333365;
+      color: #f2f2f2;
+   }
+
+   &:active {
+      color: $primary;
    }
 }
 
