--- a/src/components/CategoryBar/CategoryBar.module.scss
+++ b/src/components/CategoryBar/CategoryBar.module.scss
@@ -1,5 +1,19 @@
 @import "../../library";
 
+@mixin hoverStyle {
+   &:hover {
+      background: #ddd;
+      color: inherit;
+      border-radius: $border-radius;
+   }
+
+   &:focus {
+      outline: none;
+      box-shadow: none;
+      border-radius: 10px;
+   }
+}
+
 @mixin wrapperStyle {
    border-radius: $border-radius;
    width: 185px;
@@ -16,13 +30,17 @@
       text-decoration: none;
       color: inherit;
       font-weight: 700;
-
-      &:hover {
-         background: #ddd;
-         color: inherit;
-         border-radius: $border-radius;
-      }
    }
+}
+
+@mixin navItemStyle {
+   display: flex;
+   align-items: center;
+   padding: 0;
+   font-size: inherit;
+   font-weight: inherit;
+   line-height: inherit;
+   width: 100%;
 }
 
 .barWrapper {
@@ -36,53 +54,56 @@
 
       li {
          cursor: pointer;
-         @include fontStyle();
+         @include fontStyle;
 
-         .itemIcon {
-            display: inline-block;
-            width: 18px;
-            height: 18px;
+         .dropdown {
+            @include navItemStyle;
+            @include hoverStyle;
 
-            margin: {
-               left: 5px;
-               right: 5px;
+            .dropdownToggle {
+               display: flex;
+               padding: 0 7.5px;
+
+               &:hover {
+                  background-color: #f2f2f2;
+               }
+
+               svg {
+                  display: block;
+                  height: 32px;
+                  font-size: 0.625em;
+                  margin: {
+                     left: auto;
+                  }
+               }
+            }
+
+            .dropdownMenu {
+               padding: 0;
+               @include wrapperStyle;
+
+               .dropdownItem {
+                  padding: 0 10px;
+                  @include fontStyle;
+                  @include hoverStyle;
+               }
             }
          }
 
          .categoryItem {
-            display: flex;
-            align-items: center;
-            padding: 0;
-            font-size: inherit;
-            font-weight: inherit;
-            line-height: inherit;
-            width: 100%;
+            @include navItemStyle;
 
-            &:hover {
-               background: #ddd;
-               border-radius: 10px;
-            }
+            .itemIcon {
+               display: inline-block;
+               width: 18px;
+               height: 18px;
 
-            &:focus {
-               outline: none !important;
-               box-shadow: none !important;
-               border-radius: 10px;
-            }
-
-            .navIcon {
-               font-size: 0.875em;
                margin: {
-                  left: auto;
+                  left: 5px;
                   right: 5px;
                }
             }
          }
       }
    }
-}
-
-.menuWrapper {
-   padding: 0;
-   @include wrapperStyle();
-   @include fontStyle();
 }
