--- a/src/pages/Login.module.scss
+++ b/src/pages/Login.module.scss
@@ -21,6 +21,7 @@
       font-weight: 550;
       line-height: 24px;
       text-transform: capitalize;
+      margin-bottom: 20px;
    }
 
    .divider {
@@ -85,7 +86,7 @@
                overflow: hidden;
                text-overflow: ellipsis;
                transform-origin: left bottom;
-               transform: translate(0, 2rem);
+               transform: translate(0, 2.125rem);
                margin-left: 10px;
             }
 
