completed build filter & sort components

--- a/src/_library.scss
+++ b/src/_library.scss
@@ -5,7 +5,10 @@ $success: #47d764;
 $info: #2f86eb;
 $warning: #ffc021;
 $danger: #dc3545;
+$white-cream: #e5e7eb;
 
+$button-border: 1px solid $white-cream;
+$button-border-active: 1px solid $primary;
 $border-radius: 10px;
 $box-shadow: (rgb(60 64 67 / 10%) 0px 1px 2px 0px, rgb(60 64 67 / 15%) 0px 2px 6px 2px);
 $header-height: 64px;
