--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -1,15 +1,15 @@
 @import "../../../library";
 
 .navbar {
-   position: fixed;
+   position: sticky;
    top: 0;
    background-color: $primary;
    box-shadow: #00000050 0px 4px 6px -1px;
    font-size: 12px;
    line-height: 22px;
    width: 100%;
-   height: $header-height;
-   z-index: 100;
+   height: 64px;
+   z-index: 50;
 }
 
 .navbarMain {
