--- a/src/components/ProductList/ProductFilter.module.scss
+++ b/src/components/ProductList/ProductFilter.module.scss
@@ -21,7 +21,7 @@
 
       .filter {
          background-color: #f3f4f6;
-         border: 1px solid #e5e7eb;
+         border: $button-border;
          border-radius: $border-radius;
          padding: 5px 10px;
          font-size: 12px;
