--- a/src/components/UI/Form/Input.module.scss
+++ b/src/components/UI/Form/Input.module.scss
@@ -1,3 +1,5 @@
+@import "../../../library";
+
 .input {
    background-color: #fff;
    display: inline-block;
@@ -9,11 +11,13 @@
       bottom: 5px;
       left: 6px;
    }
-   border: none {
-      radius: 10px;
-   }
+   border: 1px solid #cacaca;
 
    &:focus {
       outline: none;
+   }
+
+   &.rounded {
+      border-radius: $border-radius;
    }
 }
