--- a/src/components/Cart/CartSection/CartSection.module.scss
+++ b/src/components/Cart/CartSection/CartSection.module.scss
@@ -5,6 +5,7 @@
    @include card-style;
 
    .body {
+      position: relative;
       background-color: #dddddd50;
       color: #555;
       overflow-y: scroll;
@@ -17,6 +18,24 @@
 
       &::-webkit-scrollbar-thumb {
          background-color: $orange;
+      }
+
+      .emptyCart {
+         @include absolute-center;
+
+         .notification {
+            display: flex;
+            align-items: center;
+
+            svg {
+               font-size: 24px;
+
+               + span {
+                  margin-left: 5px;
+                  font-size: 18px;
+               }
+            }
+         }
       }
    }
 }
