--- a/src/components/Carousel/ControlButton.module.scss
+++ b/src/components/Carousel/ControlButton.module.scss
@@ -4,7 +4,8 @@ $circle-size: 30px;
 
 .controlButton {
    position: absolute;
-   top: 120px;
+   top: 50%;
+   transform: translateY(-50%);
    padding: 15px;
    min-width: 0;
    width: $circle-size;
@@ -27,10 +28,10 @@ $circle-size: 30px;
    left: 0;
    border-top-right-radius: $circle-size * 2;
    border-bottom-right-radius: $circle-size * 2;
-   transform: translateX(-100%);
+   transform: translate(-100%, -50%);
 
    &.show {
-      transform: translateX(0);
+      transform: translate(0, -50%);
       transition: transform 0.25s linear;
    }
 
@@ -43,10 +44,10 @@ $circle-size: 30px;
    right: 0;
    border-top-left-radius: $circle-size * 2;
    border-bottom-left-radius: $circle-size * 2;
-   transform: translateX(100%);
+   transform: translate(100%, -50%);
 
    &.show {
-      transform: translateX(0);
+      transform: translate(0, -50%);
       transition: transform 0.25s linear;
    }
 
