--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -18,7 +18,7 @@
    margin: auto;
    display: flex;
    align-items: center;
-   justify-content: space-around;
+   justify-content: space-between;
 }
 
 %header-item {
