--- a/src/components/Cart/CartSection/CartItem.module.scss
+++ b/src/components/Cart/CartSection/CartItem.module.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 @import "../../../library";
 
 .wrapper {
@@ -5,7 +6,7 @@
    box-shadow: $box-shadow;
    padding: 15px 0;
    margin: 0;
-   border-radius: $border-radius / 2;
+   border-radius: math.div($border-radius, 2);
 
    & + .wrapper {
       margin-top: 10px;
